// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/button/demo/basic.md correctly 1`] = `
<button
  class="ant-btn ant-btn-primary"
  type="button"
>
  <span>
    Primary Button
  </span>
</button>
`;

exports[`renders ./components/button/demo/block.md correctly 1`] = `
<button
  class="ant-btn ant-btn-primary ant-btn-block"
  type="button"
>
  <span>
    Primary
  </span>
</button>
`;

exports[`renders ./components/button/demo/chinese-chars-loading.md correctly 1`] = `
<button
  class="ant-btn ant-btn-default ant-btn-loading"
  type="button"
>
  <span
    class="ant-btn-loading-icon"
    style="width: 0px; opacity: 0; transform: scale(0);"
  >
    <span
      aria-label="loading"
      class="anticon anticon-loading anticon-spin ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-start ant-btn-loading-icon-motion"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="loading"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
        />
      </svg>
    </span>
  </span>
  <span>
    部 署
  </span>
</button>
`;

exports[`renders ./components/button/demo/danger.md correctly 1`] = `
<button
  class="ant-btn ant-btn-primary ant-btn-dangerous"
  type="button"
>
  <span>
    Primary
  </span>
</button>
`;

exports[`renders ./components/button/demo/disabled.md correctly 1`] = `
<button
  class="ant-btn ant-btn-primary"
  type="button"
>
  <span>
    Primary
  </span>
</button>
`;

exports[`renders ./components/button/demo/ghost.md correctly 1`] = `
<div
  class="site-button-ghost-wrapper"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-background-ghost"
    type="button"
  >
    <span>
      Primary
    </span>
  </button>
  <button
    class="ant-btn ant-btn-default ant-btn-background-ghost"
    type="button"
  >
    <span>
      Default
    </span>
  </button>
  <button
    class="ant-btn ant-btn-dashed ant-btn-background-ghost"
    type="button"
  >
    <span>
      Dashed
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary ant-btn-background-ghost ant-btn-dangerous"
    type="button"
  >
    <span>
      Danger
    </span>
  </button>
</div>
`;

exports[`renders ./components/button/demo/icon.md correctly 1`] = `
<button
  class="ant-btn ant-btn-circle ant-btn-primary ant-btn-icon-only"
  type="button"
>
  <span
    aria-label="search"
    class="anticon anticon-search"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="search"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
      />
    </svg>
  </span>
</button>
`;

exports[`renders ./components/button/demo/legacy-group.md correctly 1`] = `
<div>
  <div
    class="ant-btn-group ant-btn-group-sm"
  >
    <button
      class="ant-btn ant-btn-primary ant-btn-sm"
      type="button"
    >
      <span>
        Button 1
      </span>
    </button>
    <button
      class="ant-btn ant-btn-primary ant-btn-sm"
      type="button"
    >
      <span>
        Button 2
      </span>
    </button>
    <span
      class="ant-tooltip-disabled-compatible-wrapper"
      style="display: inline-block; cursor: not-allowed;"
    >
      <button
        class="ant-btn ant-btn-primary ant-btn-sm ant-btn-icon-only"
        disabled=""
        style="pointer-events: none;"
        type="button"
      >
        <span
          aria-label="download"
          class="anticon anticon-download"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="download"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M505.7 661a8 8 0 0012.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V168c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </span>
      </button>
    </span>
    <button
      class="ant-btn ant-btn-primary ant-btn-sm ant-btn-icon-only"
      type="button"
    >
      <span
        aria-label="download"
        class="anticon anticon-download"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="download"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M505.7 661a8 8 0 0012.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V168c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/button/demo/loading.md correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center"
  style="width: 100%;"
>
  <div
    class="ant-space-item"
    style="margin-right: 8px;"
  >
    <button
      class="ant-btn ant-btn-primary ant-btn-loading"
      type="button"
    >
      <span
        class="ant-btn-loading-icon"
        style="width: 0px; opacity: 0; transform: scale(0);"
      >
        <span
          aria-label="loading"
          class="anticon anticon-loading anticon-spin ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-start ant-btn-loading-icon-motion"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="loading"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
            />
          </svg>
        </span>
      </span>
      <span>
        Loading
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
    style="margin-right: 8px;"
  >
    <button
      class="ant-btn ant-btn-primary ant-btn-sm ant-btn-loading"
      type="button"
    >
      <span
        class="ant-btn-loading-icon"
        style="width: 0px; opacity: 0; transform: scale(0);"
      >
        <span
          aria-label="loading"
          class="anticon anticon-loading anticon-spin ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion-appear-start ant-btn-loading-icon-motion"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="loading"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
            />
          </svg>
        </span>
      </span>
      <span>
        Loading
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn ant-btn-primary ant-btn-icon-only ant-btn-loading"
      type="button"
    >
      <span
        class="ant-btn-loading-icon"
      >
        <span
          aria-label="loading"
          class="anticon anticon-loading anticon-spin"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="loading"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/button/demo/multiple.md correctly 1`] = `
<button
  class="ant-btn ant-btn-primary"
  type="button"
>
  <span>
    primary
  </span>
</button>
`;

exports[`renders ./components/button/demo/size.md correctly 1`] = `
<div
  class="ant-radio-group ant-radio-group-outline"
>
  <label
    class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
  >
    <span
      class="ant-radio-button ant-radio-button-checked"
    >
      <input
        checked=""
        class="ant-radio-button-input"
        type="radio"
        value="large"
      />
      <span
        class="ant-radio-button-inner"
      />
    </span>
    <span>
      Large
    </span>
  </label>
  <label
    class="ant-radio-button-wrapper"
  >
    <span
      class="ant-radio-button"
    >
      <input
        class="ant-radio-button-input"
        type="radio"
        value="default"
      />
      <span
        class="ant-radio-button-inner"
      />
    </span>
    <span>
      Default
    </span>
  </label>
  <label
    class="ant-radio-button-wrapper"
  >
    <span
      class="ant-radio-button"
    >
      <input
        class="ant-radio-button-input"
        type="radio"
        value="small"
      />
      <span
        class="ant-radio-button-inner"
      />
    </span>
    <span>
      Small
    </span>
  </label>
</div>
`;
